--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@react-navigation/native": "^7.0.4",
     "@react-navigation/stack": "^7.0.6",
     "expo": "~52.0.11",
+    "expo-av": "^15.0.1",
     "expo-linear-gradient": "~14.0.1",
     "expo-modules-autolinking": "~2.0.0",
     "expo-status-bar": "~2.0.0",
